test_regress/t/t_param_in_func_bad.out
%Error-UNSUPPORTED: t/t_param_in_func_bad.v:24:26: Unsupported: Parameters in functions with complex assign
                                                 : ... In instance t
   24 |    localparam logic[7:0] digits[10]
      |                          ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=4.201
%Error: Exiting due to
